--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <h1>Oy pusulası fotoğrafı yapıcı</h1>
     <p>
+        Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı<br><br>
         Oy vermek için pusulanın üzerine tıklayın.
     </p>
     <button id="bastan">Baştan başla</button>
