--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     var wood3 = loadImage('wood3.jpg', main);
     var wood4 = loadImage('wood4.jpg', main);
     var img2 = loadImage('pusula.png', main);
-    var paper = loadImage('paper.png', main);
+    var papers = loadImage('paper.png', main);
 
     var secildi = false;
 
@@ -140,7 +140,7 @@
                 ctx.shadowBlur = 10;
                 ctx.shadowOffsetX = 0;
                 ctx.shadowOffsetY = 0;
-                ctx.drawImage(paper, 0,0, 300,100);
+                ctx.drawImage(papers, 0,0, 300,100);
 
                 ctx.restore();
 
