--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 </p>
 <button id="bastan">Baştan başla</button>
 <a id="indir">İndir</a>
-İsminiz: <input type="text" id="isim"/> Kimlik Yüklemek için: <input type="file" id="imageLoader" name="imageLoader"/>
-<br/>
+Kimlik Yüklemek için: <input type="file" id="imageLoader" name="imageLoader"/>
+İsminiz (Opsiyonel): <input type="text" id="isim"/> <br/>
 <br>
 <canvas id="my-canvas" width="800" height="600"></canvas>
 </body>
