--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Oy Pusulası Yapıcı</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+    <meta property="og:title" content="Oy Pusulası Fotoğrafı Yapıcı"/>
+    <meta property="og:description" content="Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı"/>
 </head>
 <style>
     #my-canvas {
