--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Oy Pusulası Yapıcı</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <meta property="og:title" content="Oy Pusulası Fotoğrafı Yapıcı"/>
+    <meta property="og:image" content="https://midorikocak.github.io/pusula/og-image.png"/>
     <meta property="og:description" content="Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı"/>
 </head>
 <style>
