--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:title" content="Oy Pusulası Fotoğrafı Yapıcı"/>
     <meta property="og:image" content="https://midorikocak.github.io/pusula/og-image.png"/>
     <meta property="og:description" content="Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı"/>
+    <meta property="og:url" content="https://midorikocak.github.io/pusula"/>
 </head>
 <style>
     #my-canvas {
