--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </style>
 <body>
 <h1>Oy pusulası fotoğrafı yapıcı</h1>
+<a href="https://www.mynameismidori.com">Midori Kocak</a> tarafından HTML5 ve Javascript kullanılarak yazılmıştır.
 <p>
     Oy pusulası fotoğrafı isteyen işyerleri için, oy pusulası fotoğrafı yapıcı<br/>
 <ul>
