--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Oy Pusulası Yapıcı</title>
+    
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+
+    <!-- You should properly set the path from the main file. -->
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <meta property="og:title" content="Oy Pusulası Fotoğrafı Yapıcı"/>
     <meta property="og:image" content="https://midorikocak.github.io/pusula/og-image.png"/>
