--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Oy Pusulası Yapıcı</title>
-    
+
     <!-- CSS Reset -->
     <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
 
@@ -41,6 +41,9 @@
     </li>
     <li>
         Resme kimlik koymak için, kimlik yükledikten sonra kimliğin görünmesini istediğiniz yere tıklayın
+    </li>
+    <li>
+        Mobilden inmiyorsa ekran resmi alın.
     </li>
     <li>
         Baştan başlaya tıklayınca zemin değişir.
