--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta property="og:url" content="https://midorikocak.github.io/pusula"/>
 </head>
 <style>
+    @charset "utf-8";
     #my-canvas {
         border: 1px solid #ababab;
         font-family: 'Indie Flower', cursive;
