--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
 </head>
 <style>
     @charset "utf-8";
+    @font-face {
+        font-family: 'AHundredMiles';
+        src: url('AHundredMiles.ttf');
+    }
     #my-canvas {
         border: 1px solid #ababab;
-        font-family: 'Indie Flower', cursive;
+        font-family: 'AHundredMiles', cursive;
         color: blue;
     }
 
@@ -189,7 +193,7 @@ Kimlik Yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader" n
 
                 ctx.restore();
 
-                ctx.font = '30px "Indie Flower"';
+                ctx.font = '30px "AHundredMiles"';
                 var isim = document.getElementById('isim').value;
                 ctx.fillStyle = "#284283";
                 ctx.fillText(isim, 60, 60);
