--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
 <style>
     @charset "utf-8";
     @font-face {
-        font-family: 'Forever';
-        src: url('forever.ttf');
+        font-family: 'AHundredMiles';
+        src: url('AHundredMiles.ttf');
     }
     #my-canvas {
         border: 1px solid #ababab;
-        font-family: 'Forever', 'Indie Flower', cursive;
+        font-family: 'AHundredMiles', 'Indie Flower', cursive;
         color: blue;
     }
 
@@ -193,7 +193,7 @@ Kimlik Yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader" n
 
                 ctx.restore();
 
-                ctx.font = '30px "Forever"';
+                ctx.font = '30px "AHundredMiles"';
                 var isim = document.getElementById('isim').value;
                 ctx.fillStyle = "#284283";
                 ctx.fillText(isim, 60, 60);
