--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         Mobilden inmiyorsa ekran resmi alın.
     </li>
     <li>
-        Masanın üzerinde zarf olsun istiyorsanız, zarf kutusunu işaretleyin.
+        Masanın üzerinde zarf olsun istiyorsanız, zarf kutusunu işaretleyin. Baştan başlaya tıklayın.
     </li>
     <li>
         Baştan başlaya tıklayınca zemin değişir.
