draw canvas on mouseUp
click seems to forget about it

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@ Kimlik Yüklemek için (İsteğe bağlı): <input type="file" id="imageLoader" n
         
         canvas.addEventListener('mouseup', function (evt) {
             grab = null;
+            drawCanvas();
         });
         
         canvas.addEventListener('mousemove', function (evt) {
